--- a/index.html
+++ b/index.html
@@ -157,17 +157,16 @@
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+            <img src="./assets/png/bpm-counter.png" alt="BPM Counter Screenshot" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 1</h3>
+            <h3 class="projects__row-content-title">BPM Counter</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
+              This project is a simple BPM (Beats Per Minute) Counter implemented using React and Vite frameworks. It
+              allows users to calculate the BPM by clicking a button and displays the BPM value in real-time.
             </p>
-            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="https://bpm-counter-roed.vercel.app/" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Visit</a>
           </div>
         </div>
         <div class="projects__row">
