--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Christian Roed Boyles</title>
   <meta name="description" content="Portfolio Template for Developer" />
-
+  <link rel="icon" type="image/png" href="assets/png/christian-roed-boyles-circle.png" />
   <link rel="stylesheet" href="css/style.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
