Update home page to show certificates

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
             <div class="skills__skill">HTML</div>
             <div class="skills__skill">CSS</div>
             <div class="skills__skill">JavaScript</div>
+            <div class="skills__skill">NodeJS</div>
             <div class="skills__skill">React</div>
+            <div class="skills__skill">VueJS</div>
             <div class="skills__skill">NextJS</div>
             <div class="skills__skill">ExpressJS</div>
             <div class="skills__skill">Postman</div>
@@ -166,10 +168,11 @@
               This project is a simple BPM (Beats Per Minute) Counter implemented using React and Vite frameworks. It
               allows users to calculate the BPM by clicking a button and displays the BPM value in real-time.
             </p>
-            <a href="https://bpm-counter-roed.vercel.app/" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Visit</a>
+            <a href="https://bpm-counter-roed.vercel.app/" class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank">Visit</a>
           </div>
         </div>
-        <div class="projects__row">
+        <!-- <div class="projects__row">
           <div class="projects__row-img-cont">
             <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
               loading="lazy" />
@@ -197,6 +200,44 @@
               praesentium.
             </p>
             <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </section>
+  <section id="certificates" class="certificates sec-pad">
+    <div class="main-container">
+      <h2 class="heading heading-sec heading-sec__mb-bg">
+        <span class="heading-sec__main">Certificates</span>
+        <span class="heading-sec__sub">
+          Discover the credentials that validate my expertise and commitment to continuous learning.
+        </span>
+      </h2>
+      <div class="projects__content">
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/certificate-of-training.jpg" alt="Certificate of Training" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Certificate of Training</h3>
+            <p class="projects__row-content-desc">
+              This training program certified me of my expertise in Git & Gitlab, VueJS, Quasar, Axios, and applying it
+              on actual tasks and collaborating with other members.
+            </p>
+          </div>
+        </div>
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/competency-certificate.jpg" alt="Competency Certificate" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Competency Certificate</h3>
+            <p class="projects__row-content-desc">
+              This certified me in completing the competency requirements of the Pixel8 Academy Frontend Development
+              Training, specializing in the Technology Stack and Software Development Tools mentioned.
+            </p>
           </div>
         </div>
       </div>
